load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "grpcproxy.go",
        "readcloser.go",
    ],
    importpath = "github.com/buchgr/bazel-remote/v2/cache/grpcproxy",
    visibility = ["//visibility:public"],
    deps = [
        "//cache:go_default_library",
        "//genproto/build/bazel/remote/asset/v1:go_default_library",
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
        "//utils/backendproxy:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@org_golang_google_genproto_googleapis_bytestream//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_sync//singleflight:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "grpcproxy_test.go",
        "timeout_singleflight_test.go",
        "upload_idle_timeout_test.go",
        "uploads_dropped_metric_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//cache:go_default_library",
        "//cache/disk:go_default_library",
        "//genproto/build/bazel/remote/execution/v2:go_default_library",
        "//server:go_default_library",
        "//utils:go_default_library",
        "//utils/backendproxy:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/testutil:go_default_library",
        "@org_golang_google_genproto_googleapis_bytestream//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//credentials/insecure:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
